--- a/WebSite.css
+++ b/WebSite.css
@@ -112,9 +112,7 @@ li a:hover:not(.active) {
       
    }
    .usdata img:hover{
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -o-transform: scale(1.1);
+    transform: scale(1.1);
 
    }
    .usdata {
